--- a/index.html
+++ b/index.html
@@ -13,23 +13,18 @@
 <body>
     <!-- header -->
     <div class="container header">
-        <nav class="navbar navbar-expand-lg text-light">
-            <h2><a class="navbar-brand text-light display-5" href="#"> Strelitzia reginae</a></h2>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <nav class="navbar navbar-expand-lg ">
+            <a class="navbar-brand text-light" href="#"> Strelitzia reginae</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item active  ">
-                        <a class="nav-link text-light" href="#">Over<span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-light" href="#">Weetjes</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-light" href="#">Wat is er mis?</a>
-                    </li>
-                </ul>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-item nav-link active text-light" href="#">Over <span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link text-light" href="#">Weetjes</a>
+                    <a class="nav-item nav-link text-light" href="#">Wat is er mis?</a>
+
+                </div>
             </div>
         </nav>
     </div>
@@ -45,7 +40,7 @@
     <h1 class="text-center">Weetjes</h1>
     <div class="container">
         <div class="row row-cols-1 row-cols-lg-3">
-            <div class="col mb-4">
+            <div class="col my-3">
                 <div class="card  ">
                     <img src="img/bird-of-paradise-art1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -55,7 +50,7 @@
                         <p class="card-text"> In de winter verlangt je paradijsvogelbloem een frissere temperatuur. Zet &lsquo;m in ieder geval binnen bij een min. temperatuur van ongeveer 13&deg; C.</p>
                     </div>
                 </div>
-                <div class="card mt-4">
+                <div class="card ">
                     <img src="img/bird-of-paradise-art4.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Sproeien</h5>
@@ -65,7 +60,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col mb-4">
+            <div class="col my-3">
                 <div class="card ">
                     <img src="img/bird-of-paradise-art2.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -78,7 +73,7 @@
 
                     </div>
                 </div>
-                <div class="card mt-4 ">
+                <div class="card ">
                     <img src="img/bird-of-paradise-art5.jpg " class="card-img-top " alt="... ">
                     <div class="card-body ">
                         <h5 class="card-title ">Stekken</h5>
@@ -87,7 +82,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col mb-4 ">
+            <div class="col my-3 ">
                 <div class="card ">
                     <img src="img/bird-of-paradise-art3.jpg " class="card-img-top " alt="... ">
                     <div class="card-body ">
@@ -99,7 +94,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="card mt-4 ">
+                <div class="card  ">
                     <img src="img/bird-of-paradise-art6.jpg " class="card-img-top " alt="... ">
                     <div class="card-body ">
                         <h5 class="card-title ">Snoeien</h5>
